--- a/serverless.yml
+++ b/serverless.yml
@@ -33,10 +33,21 @@ provider:
 
 resources:
   Resources:
-    DemoBucketUpload: # add s3 bucket
+    DemoBucketUpload: # s3 bucket
       Type: AWS::S3::Bucket
       Properties:
         BucketName: serverlessprojectbucket-amradzily
+    myDynamoDbTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.tableName}
+        AttributeDefinitions:
+          - AttributeName: ID
+            AttributeType: S
+        KeySchema:
+          - AttributeName: ID
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
 
 # list of dependencies installed via npm
 plugins:
@@ -48,6 +59,7 @@ package:
 
 # setup list of bucket-folder syncs
 custom:
+  tableName: player-points
   s3Sync:
     - bucketName: serverlessprojectbucket-amradzily
       localDir: UploadData
