--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/amrfekryy/aws-serverless#readme",
   "dependencies": {
+    "lambda-hooks": "^0.2.1",
     "serverless-s3-sync": "^1.17.1",
     "serverless-webpack": "^5.5.4"
   },
