--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "lambda-hooks": "^0.2.1",
     "serverless-s3-sync": "^1.17.1",
-    "serverless-webpack": "^5.5.4"
+    "serverless-webpack": "^5.5.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "webpack": "^5.56.1"
